// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SET_CONTEXT 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`SET_NODE_ATTRIBUTES adds node attributes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": Object {
      "1": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 1,
        },
        "quantSOY_DEFORESTATION": Object {
          "attribute_id": "SOY_DEFORESTATION",
          "attribute_type": "quant",
          "node_id": 1,
        },
      },
      "2": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 2,
        },
      },
      "3": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 3,
        },
      },
    },
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`SET_NODE_ATTRIBUTES removes node attributes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__CLEAR_SANKEY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__COLLAPSE_SANKEY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__EXPAND_SANKEY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__HIGHLIGHT_NODE 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": 1234,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SELECT_COLUMN changes the column with existing selected nodes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": Object {
      "3": Object {
        "group": 2,
      },
      "4": Object {
        "group": 0,
      },
    },
    "links": Array [],
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "1234": Object {
        "columnId": 3,
      },
      "4567": Object {
        "columnId": 4,
      },
    },
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [
    4567,
  ],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": Array [
    undefined,
    undefined,
    5,
  ],
  "selectedNodesIds": Array [
    4567,
  ],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SELECT_COLUMN changes the column with non-existent selected nodes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": Object {
      "3": Object {
        "group": 2,
      },
      "4": Object {
        "group": 0,
      },
    },
    "links": Array [],
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "4567": Object {
        "columnId": 4,
      },
    },
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [
    1234,
    4567,
  ],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": Array [
    undefined,
    undefined,
    5,
  ],
  "selectedNodesIds": Array [
    1234,
    4567,
  ],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SELECT_COLUMN changes the column without selected nodes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": Array [],
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": Array [
    undefined,
    undefined,
    3,
  ],
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SELECT_COLUMN changes the column without selected nodes for the second time 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": Array [],
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": Array [
    4,
    undefined,
    3,
  ],
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SELECT_VIEW 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": true,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": true,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_COLUMNS 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": Object {
      "1": Object {
        "id": 1,
        "name": "MUNICIPALITY",
      },
      "2": Object {
        "id": 2,
        "name": "LOGISTICS HUB",
        "useGeometryFromColumnId": 1,
      },
      "3": Object {
        "id": 3,
        "name": "BIOMES",
      },
    },
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_FLOWS_LOADING 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": true,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_IS_SEARCH_OPEN 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": true,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_LINKS 1`] = `
Object {
  "currentQuant": Object {
    "name": "VOLUME",
  },
  "data": Object {
    "columns": null,
    "links": Array [
      Object {
        "id": 1,
        "path": Array [
          12,
          34,
          56,
        ],
      },
      Object {
        "id": 2,
        "path": Array [
          78,
          90,
          12,
        ],
      },
    ],
    "nodeAttributes": null,
    "nodeHeights": Object {
      "1": Object {
        "height": 12345.34,
        "id": 1,
      },
    },
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_SELECTED_BIOME_FILTER 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": "MY_BIOME",
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_SELECTED_RECOLOR_BY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": "MY_RECOLOR_BY",
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS__SET_SELECTED_RESIZE_BY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": "MY_RESIZE_BY",
}
`;

exports[`TOOL_LINKS_RESET_SANKEY 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`TOOL_LINKS_SET_NO_LINKS_FOUND 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": true,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`Test TOOL_LINKS__SET_MORE_NODES and TOOL_LINKS__SET_MISSING_LOCKED_NODES TOOL_LINKS__SET_MISSING_LOCKED_NODES with existing nodes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "1": Object {
        "columnId": 3,
        "geoId": "BR-1234",
        "id": 1,
      },
      "2": Object {
        "columnId": 2,
        "geoId": "BR-4567",
        "id": 2,
      },
      "3": Object {
        "columnId": 8,
        "geoId": "BR-8901",
        "id": 3,
      },
      "4": Object {
        "columnId": 2,
        "geoId": "BR-4321",
        "id": 4,
      },
    },
    "nodesByColumnGeoId": Object {
      "2-BR-4321": 4,
      "2-BR-4567": 2,
      "3-BR-1234": 1,
      "8-BR-8901": 3,
    },
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`Test TOOL_LINKS__SET_MORE_NODES and TOOL_LINKS__SET_MISSING_LOCKED_NODES TOOL_LINKS__SET_MISSING_LOCKED_NODES with initial state 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "1": Object {
        "columnId": 3,
        "geoId": "BR-1234",
        "id": 1,
      },
      "2": Object {
        "columnId": 2,
        "geoId": "BR-4567",
        "id": 2,
      },
      "3": Object {
        "columnId": 8,
        "geoId": "BR-8901",
        "id": 3,
      },
    },
    "nodesByColumnGeoId": Object {
      "2-BR-4567": 2,
      "3-BR-1234": 1,
      "8-BR-8901": 3,
    },
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`Test TOOL_LINKS__SET_MORE_NODES and TOOL_LINKS__SET_MISSING_LOCKED_NODES TOOL_LINKS__SET_MORE_NODES with existing nodes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "1": Object {
        "columnId": 3,
        "geoId": "BR-1234",
        "id": 1,
      },
      "2": Object {
        "columnId": 2,
        "geoId": "BR-4567",
        "id": 2,
      },
      "3": Object {
        "columnId": 8,
        "geoId": "BR-8901",
        "id": 3,
      },
      "4": Object {
        "columnId": 2,
        "geoId": "BR-4321",
        "id": 4,
      },
    },
    "nodesByColumnGeoId": Object {
      "2-BR-4321": 4,
      "2-BR-4567": 2,
      "3-BR-1234": 1,
      "8-BR-8901": 3,
    },
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`Test TOOL_LINKS__SET_MORE_NODES and TOOL_LINKS__SET_MISSING_LOCKED_NODES TOOL_LINKS__SET_MORE_NODES with initial state 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": Object {
      "1": Object {
        "columnId": 3,
        "geoId": "BR-1234",
        "id": 1,
      },
      "2": Object {
        "columnId": 2,
        "geoId": "BR-4567",
        "id": 2,
      },
      "3": Object {
        "columnId": 8,
        "geoId": "BR-8901",
        "id": 3,
      },
    },
    "nodesByColumnGeoId": Object {
      "2-BR-4567": 2,
      "3-BR-1234": 1,
      "8-BR-8901": 3,
    },
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;
